@@ -44,8 +44,6 @@ typedef struct _DMOAudioEnc {
   gint block_align;
   gint depth;
   
-  GstClockTime current_ts;
-    
   void *ctx;
   gulong out_buffer_size;
   gulong in_buffer_size;
@@ -188,8 +186,6 @@ dmo_audioenc_init (DMOAudioEnc * enc)
   enc->depth = 16;
   enc->rate = 44100;
   enc->block_align = 0;
-  
-  enc->current_ts = 0;
 }
 
 static void
@@ -414,7 +410,6 @@ dmo_audioenc_chain (GstPad * pad, GstBuffer * buffer)
                  wrote, GST_BUFFER_TIMESTAMP (enc->out_buffer),
                  GST_BUFFER_DURATION (enc->out_buffer));
       GST_BUFFER_SIZE (enc->out_buffer) = wrote;
-      enc->current_ts = GST_BUFFER_TIMESTAMP (enc->out_buffer);
       ret = gst_pad_push (enc->srcpad, enc->out_buffer);
       enc->out_buffer = gst_buffer_new_and_alloc (enc->out_buffer_size);
       /* If the DMO can not set the timestamp we do our best guess */
@@ -425,7 +420,6 @@ dmo_audioenc_chain (GstPad * pad, GstBuffer * buffer)
                GST_BUFFER_TIMESTAMP (enc->out_buffer),
                GST_BUFFER_DURATION (enc->out_buffer));
     GST_BUFFER_SIZE (enc->out_buffer) = wrote;
-    enc->current_ts = GST_BUFFER_TIMESTAMP (enc->out_buffer);
     ret = gst_pad_push (enc->srcpad, enc->out_buffer);
     enc->out_buffer = NULL;
   }
@@ -448,7 +442,6 @@ dmo_audioenc_change_state (GstElement * element, GstStateChange transition)
       Restore_LDT_Keeper (enc->ldt_fs);
       break;
     case GST_STATE_CHANGE_PAUSED_TO_READY:
-      enc->current_ts = 0;
       if (enc->ctx) {
         Check_FS_Segment ();
         DMO_AudioEncoder_Destroy (enc->ctx);
@@ -476,38 +469,6 @@ dmo_audioenc_sink_event (GstPad * pad, GstEvent * event)
     case GST_EVENT_FLUSH_START:
       GST_DEBUG ("flush ! implement me !");
       break;
-    case GST_EVENT_NEWSEGMENT:
-    {
-      gint64 segment_start, segment_stop, segment_base;
-      gdouble segment_rate;
-      GstFormat format;
-      GstEvent *new_seg = NULL;
-
-      gst_event_parse_newsegment (event, &segment_rate, &format, &segment_start,
-                                  &segment_stop, &segment_base);
-
-      if (format == GST_FORMAT_TIME) {
-         if (segment_stop == -1) {
-           new_seg = gst_event_new_newsegment (segment_rate, format,
-                                               enc->current_ts, -1,
-                                               segment_base);
-         }
-         else {
-           new_seg = gst_event_new_newsegment (segment_rate, format,
-                               enc->current_ts,
-                               enc->current_ts + (segment_stop - segment_start),
-                               segment_base);
-         }
-      }
-
-      gst_event_unref (event);
-
-      if (GST_IS_EVENT (new_seg)) {
-        res = gst_pad_event_default (pad, new_seg);
-      }
-      break;
-
-    }
     default:
       res = gst_pad_event_default (pad, event);
       break;
